--- a/src/ui/invoices-header/invoices-header.module.scss
+++ b/src/ui/invoices-header/invoices-header.module.scss
@@ -13,6 +13,10 @@
 
     &__title{
         @include heading-m;
+
+        @include tablet{
+            @include heading-l;
+        }
     }
 
     &__count{
